[gd_scene load_steps=5 format=3 uid="uid://cef86gvjofe7b"]

[ext_resource type="Script" path="res://scrolling_bg.gd" id="1_r80qs"]
[ext_resource type="Texture2D" uid="uid://dugluf3l7gqhc" path="res://bg/cookie0165_tm01_bg1.png" id="1_y0ntl"]
[ext_resource type="Texture2D" uid="uid://di1twtkdwqcjn" path="res://bg/cookie0165_tm01_bg2.png" id="2_gellg"]
[ext_resource type="Texture2D" uid="uid://cyevoex2sa3wx" path="res://bg/cookie0165_tm01_bg3.png" id="3_7r6rb"]

[node name="ScrollingBG" type="ParallaxBackground"]
script = ExtResource("1_r80qs")

[node name="FarBG" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(1150, 0)

[node name="Sprite2D" type="Sprite2D" parent="FarBG"]
position = Vector2(700, 186)
scale = Vector2(1.216, 1)
texture = ExtResource("1_y0ntl")

[node name="MidBG" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2(1150, 0)

[node name="Sprite2D" type="Sprite2D" parent="MidBG"]
position = Vector2(700, 186)
scale = Vector2(1.216, 1)
texture = ExtResource("2_gellg")

[node name="CloseBG" type="ParallaxLayer" parent="."]
position = Vector2(0, -3)
motion_mirroring = Vector2(1390, 0)

[node name="Sprite2D" type="Sprite2D" parent="CloseBG"]
position = Vector2(700, 186)
scale = Vector2(1.216, 1)
texture = ExtResource("3_7r6rb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 368.0
offset_right = 1400.0
offset_bottom = 1049.0
color = Color(0.305882, 0.596078, 0.572549, 1)
